--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <title>Leaderboard</title>
 </head>
 <body>
-
+  <footer>
+    <small>Leaderboard &copy; Lameck Otieno</small>
+  </footer>
 </body>
 </html>
